fix: fix src path

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
     <div id="root">not rendered</div>
-    <!-- this is the core of React that is shared between all React tools (Native, Art, 3D, 360, DOM, etc') -->
-    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-    <!-- This actually handles all the rendering to the DOM, all 'document.write' stuff -->
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
     <!-- The rendering script should be last -->
-    <script src="./app.js"></script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
