--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <title>Adopt Me</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root">not rendered</div>
-    <!-- The rendering script should be last -->
     <script type="module" src="./App.js"></script>
   </body>
 </html>
